Archive2/67/8a630fcf00b573/output
main.cpp:10:1: error: extraneous 'template<>' in declaration of class 'Test'
template <>
^
main.cpp:11:7: error: redefinition of 'Test' as different kind of symbol
class Test {
      ^
main.cpp:8:7: note: previous definition is here
class Test {};
      ^
main.cpp:19:5: error: use of class template 'Test' requires template arguments
    Test a;
    ^
main.cpp:8:7: note: template is declared here
class Test {};
      ^
3 errors generated.
